# finance-coding-setup

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
.claude/: settings.json
hooks/: _shared.py  post_bash_output.py  pre-commit  pre_write_quality.py  test_hooks.py
